# skskyforge

./: .gitignore  README.md  agent.md  env.example  prd.txt  pyproject.toml  requirements.txt  skill.yaml
.github/workflows/: ci.yml  publish.yml
config/: settings.yaml
config/profiles/: default.yaml
src/skskyforge/: cli.py
src/skskyforge/exporters/: __init__.py  csv_exporter.py  excel_exporter.py  pdf_exporter.py
src/skskyforge/web/: __init__.py
src/skskyforge/web/routers/: __init__.py
src/skyforge/: __init__.py  cli.py
src/skyforge/analyzers/: __init__.py  risk.py  wellness.py
src/skyforge/calculators/: __init__.py  biorhythm.py  moon.py  numerology.py
src/skyforge/data/: numerology_meanings.json  zodiac_signs.json
src/skyforge/data/spiritual_library/: wisdom_texts.json
src/skyforge/generators/: __init__.py  daily_entry.py
src/skyforge/models/: __init__.py  birth_data.py  calendar_request.py  daily_entry.py  domains.py  profile.py
tests/test_analyzers/: test_risk.py
tests/test_calculators/: test_biorhythm.py  test_moon.py  test_numerology.py
tests/test_exporters/: test_exporters.py
tests/test_generators/: test_daily_entry.py
tests/test_web/: test_routes.py
